brat/test/golden/error/fanout-not-enough-overs.brat.golden
Error in test/golden/error/fanout-not-enough-overs.brat@2:5
f = { [/\] }
    ^^^^^^^^

  Expected function to return additional values of type: (c1 :: Nat)

